public/styles.css
body {
    background-color: #c9d6ff;
    background: linear-gradient(to right, #e2e2e2, #c9d6ff);
    margin: 0;
    font-family: 'Montserrat', sans-serif;
    box-sizing: border-box;
}

header {
    background-color: #252525;
    padding: 10px;
}

div {
    text-align: center;
    padding-bottom: 30px;
    margin-bottom: 50px;
}

.container {
    background: white;
    border-radius: 30px;
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
    margin: auto; 
    overflow: hidden;
    width: 768px;
    max-width: 100%;
    height: 390px;
}


button {
    background-color: #dc3545; 
    color: #000000; 
    padding: 8px 16px; 
    border: none;
    border-radius: 4px;
    cursor: pointer;
    font-size: 14px;
    transition: background-color 0.3s ease;
}

nav {
    display: flex;
    justify-content: center;
}

nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    font-size: 1.5em;
}

nav li {
    display: inline;
}

nav a {
    text-decoration: none;
    color: white;
    padding: 10px;
    border-bottom: 2px solid transparent;
}

nav a:hover {
    background-color: #ddd;
    color: black;
    border-bottom-color: #333;
}



.about-page {
    padding: 20px;
}

.about-section {
    background-color: white;
    border: 2px solid #555; 
    border-radius: 8px;
    padding: 20px;
    margin-top: 20px;
    text-align: center;
}

.about-section h2 {
    color: #333;
    font-size: 3em; 
    font-weight: bold; 
    margin-bottom: 15px; 
    cursor: pointer; 
}

.about-section p {
    color: #555;
    font-size: 1.1em;
}


.home-page {
    padding: 20px;
}

.home-title {
    color: #333;
    margin-bottom: 0px;
    margin-top: -20px;
    font-size: 45px;
    text-align: center;
    cursor: pointer; 
}

.home-description {
    color: #555;
    font-size: 18px;
    text-align: center;
    margin-bottom: 15px;
    margin-top: -80px; 
    margin-left: 100px;
    margin-right: 100px;
}

.search-results {
    margin-top: 50px;
    text-align: center;
}

.search-results h2{
    font-size: 50px;
}

.input{
    display: grid;
    justify-content: center;
}

#search-container {
    text-align: center;
    display: flex;
    flex-direction: column; 
    justify-content: center;
    align-items: center;
}

#search-button {
    background-color: #512da8;
    color: #fff;
    font-size: 12px;
    padding: 10px 45px;
    border: 1px solid transparent;
    border-radius: 8px;
    font-weight: 600;
    letter-spacing: 0.5px;
    text-transform: uppercase;
    margin-top: 10px;
    cursor: pointer;
    box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.25);
    margin-top: 10px;
}

#search-button:hover {
    background-color: #252525;
    color: white;
}

#search-input {
    background-color: #eee;
    border: none;
    margin: 8px 0;
    padding: 10px 15px;
    font-size: 13px;    
    border-radius: 8px;
    width: 100%;
    outline: none;
    display: inline-block;
    margin: 0 auto; 
    padding: 10px;
    width: 400px; 
    border: 2px solid #333;
    text-align: center;
}

.error-container {
    text-align: center;
}
  
.error-container h2 {
    font-size: 128px;
    margin-top: 50px;
    margin-bottom: 0;
}
  
.error-container h3 {
    font-size: 32px;
    margin: 0;
}

.plus-button {
    background-color: white;
    color: #dc3545;
    padding: 4px 8px; 
    border: none;
    border-radius: 4px;
    cursor: pointer;
    font-size: 18px;
    margin-top: 10px;
    margin-bottom: 50px;
  }
  
.plus-button:hover {
    background-color: #2980b9;
}

.community-description {
    color: #555;
    font-size: 18px;
    text-align: center;
    margin-bottom: 15px;
    margin-top: -80px; 
    margin-left: 100px;
    margin-right: 100px;
}

ul {
    list-style-type: none;
}

.books-container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.book-container {
    width: 300px;
    height: 350px;
    margin: 10px;
    padding: 10px;
    border: 2px solid #555; 
    border-radius: 8px;
    display: inline-block;
    background-color: white;
}

